@startuml

title __CLIENT's Class Diagram__\n

    namespace main {
      class main.Client {
      }
    }

  


    namespace main {
      class main.Datagram {
      }
    }

  

    namespace main {
      class main.Game {
      }
    }

  

    namespace main {
      class main.Menu {
      }
    }

  

    namespace utils {
      class utils.ComUtils {
      }

  }
  

    namespace utils {
      class utils.MockSocket {
      }
    }

  

  main.Datagram o-- utils.ComUtils : utils
  main.Game o-- main.Datagram : datagram
  main.Game o-- main.Menu : menu
  utils.MockSocket -up-|> java.net.Socket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
